--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>invoice-flash</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="invoice-flash" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <title>InvoiceFlash | Free Online Invoice Generator</title>
+  <meta name="description" content="Create and download invoices online for free with InvoiceFlash. 100% simple, fast, and secure." />
+  <meta name="keywords" content="invoice generator, free invoice, online invoice tool, invoice maker, InvoiceFlash" />
+  <meta name="robots" content="index, follow" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="InvoiceFlash | Free Online Invoice Generator" />
+  <meta property="og:description" content="Create invoices instantly, download as PDF, and manage your billing with ease." />
+  <meta property="og:image" content="https:/invoice-flash.themiya.dev/favicon.ico" />
+  <meta property="og:url" content="https://invoice-flash.themiya.dev" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="InvoiceFlash | Free Invoice Tool" />
+  <meta name="twitter:description" content="Create invoices online for free with InvoiceFlash" />
+  <meta name="twitter:image" content="https://invoice-flash.themiya.dev/favicon.ico" />
+
+  <link rel="canonical" href="https://invoice-flash.themiya.dev" />
+  <link rel="icon" href="/favicon.ico" />
+</head>
 
   <body>
     <div id="root"></div>
