More SEO Optimizations

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="InvoiceFlash | Free Online Invoice Generator" />
   <meta property="og:description" content="Create invoices instantly, download as PDF, and manage your billing with ease." />
-  <meta property="og:image" content="https:/invoice-flash.themiya.dev/favicon.ico" />
+  <meta property="og:image" content="https:/invoice-flash.themiya.dev/og-image.png" />
   <meta property="og:url" content="https://invoice-flash.themiya.dev" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="InvoiceFlash | Free Invoice Tool" />
   <meta name="twitter:description" content="Create invoices online for free with InvoiceFlash" />
-  <meta name="twitter:image" content="https://invoice-flash.themiya.dev/favicon.ico" />
+  <meta name="twitter:image" content="https://invoice-flash.themiya.dev/og-image.png" />
 
   <link rel="canonical" href="https://invoice-flash.themiya.dev" />
   <link rel="icon" href="/favicon.ico" />
